err/pywingo.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pywingo'...
Compiling './lib/python3.5/site-packages/pywingo/__init__.py'...
***   File "./lib/python3.5/site-packages/pywingo/__init__.py", line 349
    except subprocess.CalledProcessError, e:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywingo/commands.py'...
***   File "./lib/python3.5/site-packages/pywingo/commands.py", line 330
    def False(self):
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywingo-0.0.12.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pywingo'...
Listing './share/doc/pywingo/doc'...
Listing './share/doc/pywingo/examples'...
Compiling './share/doc/pywingo/examples/dzen-active-window.py'...
***   File "./share/doc/pywingo/examples/dzen-active-window.py", line 11
    print W.GetClientName(W.GetActive())
          ^
SyntaxError: invalid syntax

Compiling './share/doc/pywingo/examples/dzen-workspaces.py'...
***   File "./share/doc/pywingo/examples/dzen-workspaces.py", line 40
    print '[%s] %s' % (' '.join(vtagged), ' '.join(htagged))
                  ^
SyntaxError: invalid syntax

Compiling './share/doc/pywingo/examples/snapto.py'...
***   File "./share/doc/pywingo/examples/snapto.py", line 114
    print newtop
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './share/doc/pywingo/examples/transparency.py'...
Listing './share/python-wheels'...
